@@ -38,6 +38,8 @@ https://github.com/elastic/beats/compare/v6.4.0...6.4[Check the HEAD diff]
 
 *Filebeat*
 
+- Fixed a memory leak when harvesters are closed. {pull}7820[7820]
+
 *Heartbeat*
 
 *Metricbeat*
